--- a/public/main.css
+++ b/public/main.css
@@ -86,6 +86,7 @@ hr {
 }
 
 .data {
+    width: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -93,8 +94,7 @@ hr {
 
 #link-preview img {
     width: auto;
-    height: 24vw;
-    max-height: 100px;
+    height: 100px;
     margin: 12px;
     border-radius: 10px;
 }
@@ -103,14 +103,19 @@ hr {
     font-weight: bolder;
     font-size: x-large;
     margin: 4px;
+    height: 30px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 #description {
     font-weight: bold;
     font-size: large;
     margin: 4px;
-    height: auto;
-    max-height: 44px;
+    height: 45px;
     display: block;
     overflow-y: scroll;
     -ms-overflow-style: none;
@@ -126,8 +131,14 @@ hr {
 #url {
     color: antiquewhite;
     font-size: medium;
-    margin: 6px 4px;
+    height: 18px;
     text-decoration: underline;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+    transform: translateY(7px);
 }
 
 ul {
