--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,195 +1,137 @@
+@import "./link.scss";
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+// 
+/*
+fonts : 
+    font-family: 'Poppins', sans-serif;
+
+    font-family: 'Roboto', sans-serif;
+
+    font-family: 'Rosario', sans-serif;
+*/
 // variables
-$bg-color:#1d1f20;
+$bg-color:#2c3e50;
+$bg2:#FF4136;
+$link-red:#EE352E;
 
 body {
-    background-color: #262626;
+
     color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Poppins', sans-serif;
     width: 100%;
     height: 100%;
     background-attachment: fixed;
+
+
+}
+
+.bg {
+    width: 100%;
+    height: 100%;
+    background-color: $bg-color;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    &:before {
+        content: "";
+        width: 100%;
+        height: 90%;
+        background-color: $bg2;
+        position: fixed;
+        top: 100%;
+        left: -10px;
+        z-index: -1;
+        transform-origin: 50% 0;
+        transform: rotate(45deg);
+    }
+
+    img {
+        width: 40%;
+        max-width: 400px;
+        height: auto;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+    }
 }
 
 h1 {
     width: 100%;
     text-align: center;
-    margin: 20px auto 30px auto;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 20px auto 20px auto;
     letter-spacing: 1px;
+    font-size: 2.5rem;
 }
 
-#link-preview {
-    display: flex;
-    flex-direction: row;
+.tab {
     width: 90%;
-    max-width: 500px;
-    justify-content: space-between;
-    align-items: center;
-    align-self: center;
-    padding: 12px 18px 16px 18px;
-    font-family: Arial, Helvetica, sans-serif;
+    max-width: 860px;
+    background: white;
+    border-radius: 8px;
     margin: auto;
-    border: 2px solid wheat;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #262626;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-
-    #link-preview:active {
-        transform: scale(.96);
-    }
-
-    hr {
-        width: 90%;
-        margin: 4px;
-    }
-
-    .data {
-        width: 70%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-
-    img {
-        max-width: 100%;
-        height: 100%;
-        max-height: 100px;
-        margin: 4px;
-        border-radius: 10px;
-    }
-
-
-    #title {
-        font-weight: bolder;
-        font-size: x-large;
-        margin: 4px;
-        height: 30px;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        /* IE and Edge */
-        scrollbar-width: none;
-        /* Firefox */
-    }
-
-    #description {
-        font-weight: bold;
-        font-size: large;
-        margin: 4px;
-        height: 45px;
-        display: block;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
-
-    #description::-webkit-scrollbar {
-        display: none;
-    }
-
-    #url {
-        color: antiquewhite;
-        font-size: medium;
-        height: 18px;
-        text-decoration: underline;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-        transform: translateY(2px);
-    }
-
-}
-
-section {
-    display: flex;
-    flex-direction: row;
-    width: auto;
-    max-width: 380px;
-    justify-content: space-between;
-    justify-self: center;
-    align-items: center;
-    align-self: center;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 20px auto 50px auto;
-    background-color: $bg-color;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-    padding: 12px 20px;
-    border-radius: 24px;
-
-    input {
-        background-color: transparent;
-        color: white;
-        width: 100%;
-        border: none;
-        outline: none;
-        font-size: medium;
-
-        &:required {
-            border: none;
-            outline: none;
-            box-shadow: none;
-        }
-
-        &:invalid {
-            box-shadow: none;
-        }
-    }
-
-
-    button {
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
-        border: 2px solid white;
-        padding: 10px;
-        background-color: transparent;
-        outline: none;
-        margin-bottom: 2px;
-        cursor: pointer;
-
-        &:before {
-            content: "";
-            display: inline;
-            position: absolute;
-            width: 2px;
-            height: 10px;
-            color: white;
-            background: white;
-            transform: rotate(-45deg) translate(100%, 110%);
-        }
-
-        &:active {
-            transform: scale(.95);
-        }
-    }
-
-}
-
-ul {
-    width: 95%;
-    max-width: 800px;
-    height: auto;
-    margin: auto;
+    color: black;
+    padding: 28px;
     margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    justify-self: center;
-    font-size: 18px;
+    animation: popup 500ms ease-out;
+
+    .heading,
+    .step {
+        font-family: 'Poppins', sans-serif;
+        font-size: x-large;
+        color: $bg-color;
+        font-weight: bold;
+    }
+
+    .step {
+        margin-top: 10px;
+    }
+
+    span {
+        font-size: medium;
+        font-family: 'Poppins',
+            sans-serif;
+        margin-bottom: 20px;
+    }
+
+    p {
+        padding: 10px;
+        font-size: 1.08rem;
+        max-width: 70ch;
+        word-wrap: break-word;
+        line-height: 26px;
+    }
+
+    ol {
+        padding: 4px 30px 5px 30px;
+    }
+
+    li {
+        margin: 8px;
+    }
 }
 
 a {
-    color: turquoise;
-    font-size: 20px;
+    text-decoration: none;
+    color: $link-red;
 }
 
-li {
-    margin: 6px;
+
+@keyframes popup {
+    0% {
+        transform: translateY(120px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
