--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,12 +1,3 @@
-@import "./link.scss";
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-// 
 /*
 fonts : 
     font-family: 'Poppins', sans-serif;
@@ -19,6 +10,17 @@ fonts :
 $bg-color:#2c3e50;
 $bg2:#FF4136;
 $link-red:#EE352E;
+
+@import "./link.scss";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+// 
+
 
 body {
 
@@ -133,5 +135,128 @@ a {
     100% {
         transform: translateY(0);
         opacity: 1;
+    }
+}
+
+// footer
+footer {
+    width: 100%;
+    position: absolute;
+    background: #171e29;
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0;
+    margin-top: 50px;
+    padding: 10px;
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    .msg {
+        display: flex;
+        flex-direction: row;
+        width: 85%;
+        max-width: 380px;
+        justify-content: space-between;
+        justify-self: center;
+        align-items: center;
+        align-self: center;
+        margin: 20px auto 30px auto;
+        background-color: white;
+        box-shadow: inset 0 0 6px #262626;
+        padding: 6px;
+        border-radius: 24px;
+
+
+        input {
+            background-color: transparent;
+            color: #262626;
+            width: 90%;
+            border: none;
+            outline: none;
+            font-size: medium;
+            font-family: 'Poppins',
+                sans-serif;
+            padding: 6px;
+
+            &:required {
+                border: none;
+                outline: none;
+                box-shadow: none;
+            }
+
+            &:invalid {
+                box-shadow: none;
+            }
+        }
+
+        button {
+            padding: 12px 16px;
+            border-radius: 20px;
+            outline: none;
+            border: none;
+            background-color: $bg2;
+            font-family: 'Poppins',
+                sans-serif;
+            color: white;
+            cursor: pointer;
+            margin-left: -30px;
+
+            &:active {
+                transform: scale(.95);
+            }
+        }
+
+
+    }
+
+    .end-holder {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+
+        .copyright,
+        .hosted {
+            font-size: x-small;
+        }
+    }
+
+    img {
+        // position: absolute;
+        width: 40%;
+        max-width: 200px;
+        margin-bottom: 6px;
+    }
+
+    .social-links {
+        display: flex;
+        width: 85%;
+        max-width: 220px;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-right: 6px;
+        transform: translateY(8px);
+
+        svg {
+            width: 40px;
+            height: 40px;
+            cursor: pointer;
+            fill: white;
+        }
+
+        svg:hover {
+            fill: $bg2;
+        }
+
+        svg:active {
+            transform: scale(0.95);
+        }
     }
 }
