--- a/public/styles/link.scss
+++ b/public/styles/link.scss
@@ -1,3 +1,11 @@
+@import "./variable.scss";
+
+@mixin small {
+    @media (max-width : 300px) {
+        @content;
+    }
+}
+
 #link-preview {
     display: flex;
     flex-direction: row;
@@ -14,6 +22,10 @@
     background-color: white;
     font-family: 'Poppins', sans-serif;
     color: black;
+
+    @include small {
+        flex-direction: column-reverse;
+    }
 
     #link-preview:active {
         transform: scale(.96);
@@ -44,24 +56,16 @@
         font-weight: bolder;
         font-size: 1.6rem;
         margin: 4px;
-        height: 32px;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        /* IE and Edge */
-        scrollbar-width: none;
-        /* Firefox */
+        word-wrap: break-word;
     }
 
     #description {
         font-weight: bold;
         font-size: .93rem;
         margin: 4px;
-        height: 45px;
         display: block;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
         opacity: .8;
+        word-wrap: break-word;
 
     }
 
@@ -73,7 +77,6 @@
         color: gray;
         font-size: medium;
         font-family: 'Roboto', sans-serif;
-        height: 18px;
         text-decoration: underline;
         overflow-y: scroll;
         -ms-overflow-style: none;
@@ -97,16 +100,15 @@ section {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     padding: 12px 20px;
     border-radius: 24px;
-    animation: shrink 1800ms ease-out;
+    animation: shrink 500ms ease-out;
 
     input {
         background-color: transparent;
         color: white;
-        width: 100%;
+        width: 75%;
         border: none;
         outline: none;
         font-size: medium;
-
 
         &:required {
             border: none;
@@ -120,27 +122,17 @@ section {
     }
 
 
-    button {
-        width: 24px;
-        height: 24px;
-        border-radius: 50%;
-        border: 2px solid white;
-        padding: 10px;
-        background-color: transparent;
-        outline: none;
-        margin-bottom: 2px;
-        cursor: pointer;
+    svg {
 
-        &:before {
-            content: "";
-            display: inline;
-            position: absolute;
-            width: 2px;
-            height: 10px;
-            color: white;
-            background: white;
-            transform: rotate(-45deg) translate(100%, 110%);
-        }
+        width: 28px;
+        display: inline-block;
+        height: 28px;
+        fill: white;
+        outline: none;
+        cursor: pointer;
+        flex-shrink: 1;
+        margin-top: 4px;
+        padding: 0;
 
         &:active {
             transform: scale(.95);
