--- a/public/styles/_link.scss
+++ b/public/styles/_link.scss
@@ -1,7 +1,5 @@
-@import "./variable.scss";
-
 @mixin small {
-    @media (max-width : 300px) {
+    @media (max-width : 420px) {
         @content;
     }
 }
@@ -37,7 +35,7 @@
     }
 
     .data {
-        width: 70%;
+        width: 95%;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -46,9 +44,13 @@
     img {
         max-width: 100%;
         height: 100%;
-        max-height: 100px;
+        max-height: 120px;
         margin: 4px 2px 4px 12px;
         border-radius: 10px;
+
+        @include small {
+            margin: 0;
+        }
     }
 
 
@@ -56,7 +58,6 @@
         font-weight: bolder;
         font-size: 1.6rem;
         margin: 4px;
-        word-wrap: break-word;
     }
 
     #description {
@@ -65,12 +66,6 @@
         margin: 4px;
         display: block;
         opacity: .8;
-        word-wrap: break-word;
-
-    }
-
-    #description::-webkit-scrollbar {
-        display: none;
     }
 
     #url {
@@ -78,9 +73,6 @@
         font-size: medium;
         font-family: 'Roboto', sans-serif;
         text-decoration: underline;
-        overflow-y: scroll;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
         transform: translateY(2px);
     }
 
