--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -1,5 +1,3 @@
-@import "./variable.scss";
-
 @mixin mobile {
     @media (max-width : #{$mobile}) {
         @content;
@@ -29,11 +27,6 @@ nav {
         justify-content: flex-start;
     }
 
-    a {
-        color: white;
-        text-decoration: none;
-    }
-
     a:hover {
         color: $bg2;
     }
@@ -41,11 +34,11 @@ nav {
 
     #nav-h {
         display: block;
-        font-size: 2.12rem;
+        font-size: 2rem;
         text-transform: uppercase;
-        letter-spacing: 5px;
+        letter-spacing: 3px;
         color: $link-red;
-        margin-left: 20px;
+        margin-left: 40px;
         z-index: 50;
         background-color: inherit;
 
@@ -63,7 +56,7 @@ nav {
 .burger {
     background-color: inherit;
     display: none;
-    height: 40px;
+    height: 36px;
     width: 60px;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
@@ -105,8 +98,13 @@ nav {
         top: 70px;
         transition: 400ms;
         transform-origin: 0 0;
-        transform: scale(0);
-        border-top: 2px solid rgba(0, 0, 0, 0.1);
+        transform: translate(-100%);
+        border-top: 2px solid rgba(0, 0, 0, 1);
+    }
+
+    a {
+        color: white;
+        text-decoration: none;
     }
 
     li {
@@ -123,10 +121,13 @@ nav {
         outline: none;
         font-family: "Raleway", sans-serif;
 
-
         @include mobile {
             padding: 20px;
             width: 100%;
+        }
+
+        &:hover {
+            color: $bg2;
         }
     }
 
@@ -137,7 +138,7 @@ nav {
 /*  added class for animation purpose  */
 
 .open {
-    transform: scale(1);
+    transform: translate(0);
 }
 
 .menuAnimate {
