--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -251,6 +251,7 @@ footer {
         justify-content: space-between;
         align-items: flex-end;
         margin-right: 6px;
+        margin-left: 6px;
         transform: translateY(8px);
 
         svg {
