--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -87,13 +87,15 @@ nav {
     width: 480px;
 
     @include mobile {
+        display: fixed;
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
         position: absolute;
         background-color: $nav-color;
-        max-width: 200px;
-        height: 80vh;
+        width: 80vw;
+        max-width: 400px;
+        height: calc(100vh - 70px);
         max-height: 700px;
         top: 70px;
         transition: 400ms;
@@ -103,32 +105,36 @@ nav {
     }
 
     a {
-        color: white;
         text-decoration: none;
     }
 
     li {
+        width: 100%;
         list-style: none;
         text-decoration: none;
         text-transform: uppercase;
         letter-spacing: 3px;
         font-size: medium;
         border-bottom: 3px solid transparent;
-        padding: 8px;
+        padding: 10px;
+        margin: 8px;
         font-weight: bold;
         cursor: pointer;
         color: white;
         outline: none;
-        font-family: "Raleway", sans-serif;
-
-        @include mobile {
-            padding: 20px;
-            width: 100%;
-        }
+        font-family: 'Roboto', sans-serif;
 
         &:hover {
             color: $bg2;
         }
+
+        @include mobile {
+            padding: 10px;
+            width: 100%;
+            text-align: center;
+        }
+
+
     }
 
 }
