--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -33,12 +33,26 @@ nav {
 
 
     #nav-h {
-        display: block;
-        font-size: 1.8rem;
+        #logo {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+            outline: none;
+
+            &:active {
+                transform: scale(.9);
+            }
+        }
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 1.6rem;
         text-transform: uppercase;
         letter-spacing: 3px;
         color: $link-red;
-        margin-left: 40px;
+        margin-left: 30px;
         z-index: 50;
         background-color: inherit;
 
@@ -48,7 +62,7 @@ nav {
         }
 
         @include small {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
         }
     }
 }
